@@ -7127,6 +7127,34 @@ SCons assumes that the call will also create a .h file
 or a .hpp file
 (if the yacc source file ends in a .yy suffix)
 
+.IP YACCHFILESUFFIX
+The suffix of the C
+header file generated by the parser generator
+when the
+.B -d
+option is used.
+Note that setting this variable does not cause
+the parser generator to generate a header
+file with the specified suffix,
+it exists to allow you to specify
+what suffix the parser generator will use of its own accord.
+The default value is
+.BR .h .
+
+.IP YACCHXXFILESUFFIX
+The suffix of the C++
+header file generated by the parser generator
+when the
+.B -d
+option is used.
+Note that setting this variable does not cause
+the parser generator to generate a header
+file with the specified suffix,
+it exists to allow you to specify
+what suffix the parser generator will use of its own accord.
+The default value is
+.BR .hpp .
+
 .IP ZIP
 The zip compression and file packaging utility.
 
